src/kubernetes/perian/manifests/hello-world/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
  namespace: perian-hello-world
spec:
  selector:
    app: hello-world
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
